--- a/server/build.gradle
+++ b/server/build.gradle
@@ -41,6 +41,10 @@ dependencies {
 
 	compileOnly 'io.jsonwebtoken:jjwt-api:0.10.5'
 	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.10.5', 'io.jsonwebtoken:jjwt-jackson:0.10.5'
+
+	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+
+	implementation 'org.springframework.boot:spring-boot-starter-validation'
 }
 
 tasks.named('test') {
