--- a/k8s/db/db-pv.yaml
+++ b/k8s/db/db-pv.yaml
@@ -3,15 +3,11 @@ kind: PersistentVolume
 metadata:
   name: mysql-pv 
 spec:
-  volumeMode: Filesystem
   capacity:
-    storage: 3Gi
+    storage: 1Gi
   accessModes:
-    - ReadWriteOnce
+    - ReadWriteMany
   persistentVolumeReclaimPolicy: Retain
-  storageClassName: ""
-  hostPath:
-   path: /mysql/mysql_data
-  claimRef:
-   name: mysql-pvc
-   namespace: default
+  nfs:
+    server: 192.168.1.10
+    path: /mysql/mysql-data
