--- a/k8s/db/db-pvc.yaml
+++ b/k8s/db/db-pvc.yaml
@@ -2,12 +2,9 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: mysql-pvc
-  namespace: default
 spec:
   accessModes:
-    - ReadWriteOnce
-  volumeMode: Filesystem
+    - ReadWriteMany
   resources:
     requests:
-      storage: 3Gi
-  storageClassName: ""
+      storage: 1Gi
