--- a/k8s/db/db-pv.yaml
+++ b/k8s/db/db-pv.yaml
@@ -10,4 +10,4 @@ spec:
   persistentVolumeReclaimPolicy: Retain
   nfs:
     server: 192.168.1.10
-    path: /mysql/mysql-data
+    path: /nfs/mysql-data
