프로메테우스 설치 파일들 수정

--- a/k8s/prometheus/prometheus-server-volume.yaml
+++ b/k8s/prometheus/prometheus-server-volume.yaml
@@ -4,13 +4,13 @@ metadata:
   name: prometheus-server
 spec:
   capacity:
-    storage: 10Gi
+    storage: 1Gi
   accessModes:
     - ReadWriteMany
   persistentVolumeReclaimPolicy: Retain
   nfs:
     server: 192.168.1.10
-    path: /nfs_shared/prometheus/server
+    path: /nfs/prometheus/server
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
@@ -21,4 +21,4 @@ spec:
     - ReadWriteMany
   resources:
     requests:
-      storage: 10Gi
+      storage: 1Gi
