--- a/k8s/frontend/front.yaml
+++ b/k8s/frontend/front.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
       - name: react-app
-        image: leesungkyu/react-app
+        image: leesungkyu/simpleboardnginx
         imagePullPolicy: Always
         ports:
         - containerPort: 80
