--- a/server/build.gradle
+++ b/server/build.gradle
@@ -15,9 +15,9 @@ plugins {
 group = 'com.simple'
 version = '0.0.1-SNAPSHOT'
 
-java {
-	sourceCompatibility = '11'
-}
+// java {
+// 	sourceCompatibility = '11'
+// }
 
 repositories {
 	mavenCentral()
@@ -33,6 +33,9 @@ dependencies {
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
 	runtimeOnly 'com.mysql:mysql-connector-j'
+	implementation 'io.jsonwebtoken:jjwt-api:0.11.2'
+	implementation 'io.jsonwebtoken:jjwt-impl:0.11.2'
+	implementation 'io.jsonwebtoken:jjwt-jackson:0.11.2'
 	// https://mvnrepository.com/artifact/mysql/mysql-connector-java
 
 	//querydsl 추가
