--- a/server/docker/Dockerfile
+++ b/server/docker/Dockerfile
@@ -1,4 +1,4 @@
 FROM openjdk:11
 ARG JAR_FILE=*.jar
-COPY ../build/lib/${JAR_FILE} app.jar
+COPY ../build/libs/${JAR_FILE} app.jar
 ENTRYPOINT ["java","-jar","/app.jar"]
