--- a/back.yaml
+++ b/back.yaml
@@ -31,7 +31,7 @@ spec:
           - name: SPRING_DATASOURCE_PASSWORD
             value: "1234"
       imagePullSecrets:
-        - name: 생성한 시크릿 이름
+        - name: db-secret
       volumes:
         - name: log-volume
           emptyDir:
